# arxiv-satellite

./: .gitignore  LICENSE  README.md  formatter.py  function.py  keyword.yml  pixi.toml  publisher.py  pyproject.toml  requirements.txt  run.py  slackbot_settings.py
.github/workflows/: checker.yml  code-rabbit.yml  python-scheduler.yml
